Thu Jun 14 21:15:31 CEST 2007  Jochen Eisinger <coffee@silcnet.org>

	* Fix off by one error when loading modules.  Affected file is
	  apps/irssi/src/core/modules-load.c

	* Don't delete hilight entry (because it's just a pointer, not a
	  copy).  Affected file is 
	  apps/irssi/src/fe-common/silc/fe-silc-messages.c

Mon Jun 11 22:10:17 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Added __SILC_TOOLKIT_x_x_x macro to all Toolkit distribution
	  which can be used to check for Toolkit version in third-party
	  software.  Affected file is configure.ad, includes/silc.h.in.

Sun Jun 10 17:32:15 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Added support for channel@server channel name strings to
	  client library (SILC protocol version 1.3 change).  Affected
	  files are lib/silcclient/silcclient_entry.h, client_entry.c.

	* Added full_nicknames and full_channel_names settings to
	  SilcClientParams that can be used to specify whether client
	  library returns full nickname and channel name strings.
	  Full strings are nick@server and channel@server.  Affected
	  file is lib/silcclient/client_entry.c and command.c.

Sat Jun  9 19:43:25 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed unix connecting failure to return error code correctly.
	  Affected file is lib/silcutil/unix/silcunixnet.c.

Fri Jun  8 23:32:33 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed SKE timeout double free crash.  Affected file is
	  lib/silcske/silcske.c.

	* Fixed MIME multipart decoding buffer overflow.  Affected file
	  is lib/silcutil/silcmime.c.  Thanks to Matt Miller for patch.

Fri Jun  8 18:39:34 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed connection auth protocol timeout crash.  Affected
	  file is lib/silcske/silconnauth.c.

	* Fixed FSM machine finishing to check for existing threads
	  at the final free callback to allow time for the threads to
	  finish.  Affected file lib/silcutil/silcfsm.c.
